<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shape"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toTopOf="parent"
            android:contentDescription="@string/image_pojok_pada_login_halaman" />

        <TextView
            android:id="@+id/Tv_Ucapan_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:layout_marginTop="180dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etEmail_Log"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/input"
            android:hint="@string/enter_email"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Tv_Ucapan_Login"
            android:autofillHints=""
            tools:ignore="RtlSymmetry,TextFields" />

        <EditText
            android:id="@+id/etPw_Login"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/input"
            android:hint="@string/enter_passowrd"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/ic_baseline_visibility_24"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:longClickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail_Log"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/Login"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPw_Login" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>